# khld-playwright-pytest

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  allure-categories.json  automation-testing-framework-analysis.md  conftest.py  debug_reqres.py  docker-compose.yml  pyproject.toml  pytest.ini  setup.py  testing_website_list.md
.github/workflows/: api-tests.yml  deploy-reports.yml  e2e-tests.yml  nightly-regression.yml  smoke-tests.yml
apps/: __init__.py
apps/api/: __init__.py
apps/api/omdb/: README.md  TEST_CASES.md  __init__.py  conftest.py
apps/api/petstore/: TEST_CASES.md  __init__.py  conftest.py
apps/api/reqres/: README.md  TEST_CASES.md  __init__.py  conftest.py
apps/api/restful_booker/: TEST_CASES.md  __init__.py  conftest.py
apps/e2e/: __init__.py
apps/e2e/medusa_store/: TEST_CASES.md  (+1 more)
config/: environments.yml  test_data.yml
config/apps/: __init__.py  medusa_store.yml  omdb_config.yml  petstore.yml  reqres.yml  reqres_config.yml  restful_booker.yml  sauce_demo_config.yml  the_internet_config.yml
docs/: ALLURE_ENHANCEMENTS.md  CICD.md  DECORATOR_GUIDE.md  MARKERS.md  PAGE_OBJECTS.md  SETUP.md  TESTING.md  VERIFICATION_SUMMARY.md
infrastructure/: __init__.py
infrastructure/fixtures/: __init__.py  app_factory.py  har_recording.py  pages.py  session.py
infrastructure/hooks/: __init__.py  unified_reporting.py
infrastructure/utils/: __init__.py  allure_helpers.py  base_api_client.py  data_loader.py  logger.py
pages/: __init__.py  base_page.py  dashboard_page.py  login_page.py
scripts/: generate-report.sh  setup-vps.sh
(+62 files in other folders)
