[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-pytest-framework"
version = "1.0.0"
description = "Python-based automation testing framework using Playwright and pytest"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Test Automation Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pytest>=8.0.0,<9.0.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.5.0",
    "allure-pytest>=2.15.0",
    "pytest-xdist>=3.5.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "pytest-rerunfailures>=14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*", "infrastructure*", "pages*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
